--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="imgBox">
             <img src="" id="qrImg">
-            <div class="progress"></div>
+            <div class="bars"></div>
 
         </div>
         <button id="btn" class="btns">Generate QR code</button>
