add delete history button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Generator</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="page2.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@100;200;300;500&family=Quicksand:wght@400;500&family=Roboto:wght@300;400;500&family=Source+Sans+3&display=swap" rel="stylesheet">
@@ -26,14 +27,14 @@
             <button id = "copybtn" class="btns">Copy URL</button>
             <button id = "downloadbtn" class="btns">Download QR Code</button>
             <button id = "resetbtn" class="btns">Reset</button>
+            <button id = "historybtn" class="btns">Delete History</button>
             <a href="#page-2">Show History</a>
         </div>
     </div>
 
-
     <div id="page-2">
+        <h1 id = "historyTitle">QR History</h1>
         <div class="addBox">
-            <h1 id = "historyTitle">QR History</h1>
         </div>
     </div>
 
