--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@100;200;300;500&family=Quicksand:wght@400;500&family=Roboto:wght@300;400;500&family=Source+Sans+3&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@100;200;300;500&family=Quicksand:wght@400;500&family=Roboto:wght@300;400;500&family=Source+Sans+3&display=swap" rel="stylesheet">
     <link rel="icon" href="https://www.bing.com/images/search?view=detailV2&ccid=28IWve1P&id=38F23502818AF7E43650EF0B953BDA8E8DB4B2B9&thid=OIP.28IWve1Pqv7o7-ZusPN9iwHaHa&mediaurl=https%3a%2f%2fpngimg.com%2fuploads%2fqr_code%2fqr_code_PNG28.png&exph=1600&expw=1600&q=qrcode+icon&simid=608038950184092621&FORM=IRPRST&ck=43039B021BAAD6CC6F6211A4364F4617&selectedIndex=4&itb=1">
 </head>
 <body>
     <div id="page-1">
-        <h1 id = "mainTitle">QR Code Generator</h1>
+        <div class="navbar">
+            <h1 id = "mainTitle">QR Code Generator</h1>
+        </div>
         <div class="container">
             <p>Enter Text Or URL</p>
             <div class="mainContainer">
