Customize Color of QR code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <img src="" id="qrImg">
                 <div class="progress"></div>
             </div>
+            <div class="color-box">
+                <p>Choose a Color :</p>
+                <input type="color" id="color-input" value="#bdd70f">
+            </div>
+
             <button id="btn" class="btns">Generate QR code</button>
             <button id = "copybtn" class="btns">Copy URL</button>
             <button id = "downloadbtn" class="btns">Download QR Code</button>
