--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@100;200;300;500&family=Quicksand:wght@400;500&family=Roboto:wght@300;400;500&family=Source+Sans+3&display=swap" rel="stylesheet">
     <link rel="icon" href="https://www.bing.com/images/search?view=detailV2&ccid=28IWve1P&id=38F23502818AF7E43650EF0B953BDA8E8DB4B2B9&thid=OIP.28IWve1Pqv7o7-ZusPN9iwHaHa&mediaurl=https%3a%2f%2fpngimg.com%2fuploads%2fqr_code%2fqr_code_PNG28.png&exph=1600&expw=1600&q=qrcode+icon&simid=608038950184092621&FORM=IRPRST&ck=43039B021BAAD6CC6F6211A4364F4617&selectedIndex=4&itb=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="page-1">
         <div class="navbar">
             <h1 id = "mainTitle">QR Code Generator</h1>
+            <a href="#page-2"><i class="fa-solid fa-clock-rotate-left"></i></a>
         </div>
         <div class="container">
             <p>Enter Text Or URL</p>
@@ -36,7 +38,7 @@
             <button id = "downloadbtn" class="btns">Download QR Code</button>
             <button id = "resetbtn" class="btns">Reset</button>
             <button id = "historybtn" class="btns">Delete History</button>
-            <a href="#page-2">Show History</a>
+            <!-- <a href="#page-2">Show History</a> -->
         </div>
     </div>
 
