some changes in history btn

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="color-box">
                 <p>Choose a Color :</p>
-                <input type="color" id="color-input" value="#bdd70f">
+                <input type="color" id="color-input" value="#19399a">
             </div>
 
             <button id="btn" class="btns">Generate QR code</button>
