some changes in history btn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Enter Text Or URL</p>
             <div class="mainContainer">
                 <input type="text" placeholder="Enter Something" id="qrText">
-            </div>
+                <i class="fa-regular fa-copy"></i>            </div>
             <div class="imgBox">
                 <img src="" id="qrImg">
                 <div class="progress"></div>
@@ -34,11 +34,10 @@
             </div>
 
             <button id="btn" class="btns">Generate QR code</button>
-            <button id = "copybtn" class="btns">Copy URL</button>
+            <!-- <button id = "copybtn" class="btns">Copy URL</button> -->
             <button id = "downloadbtn" class="btns">Download QR Code</button>
             <button id = "resetbtn" class="btns">Reset</button>
             <button id = "historybtn" class="btns">Delete History</button>
-            <!-- <a href="#page-2">Show History</a> -->
         </div>
     </div>
 
