changes in input operation and img section, delete generate btn

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <input type="text" placeholder="Enter Something" id="qrText">
                 <i class="fa-regular fa-copy"></i>            </div>
             <div class="imgBox">
-                <img src="" id="qrImg">
-                <div class="progress"></div>
+                <img src="resources/download.png" id="qrImg">
+                <!-- <div class="progress"></div> -->
             </div>
             <div class="color-box">
                 <p>Choose a Color :</p>
-                <input type="color" id="color-input" value="#19399a">
+                <input type="color" id="color-input" value="#ffffff">
             </div>
 
-            <button id="btn" class="btns">Generate QR code</button>
+            <!-- <button id="btn" class="btns">Generate QR code</button> -->
             <!-- <button id = "copybtn" class="btns">Copy URL</button> -->
             <button id = "downloadbtn" class="btns">Download QR Code</button>
             <button id = "resetbtn" class="btns">Reset</button>
