--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@100;200;300;500&family=Quicksand:wght@400;500&family=Roboto:wght@300;400;500&family=Source+Sans+3&display=swap" rel="stylesheet">
     <link rel="icon" href="resources/qr-code.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="page-1">
         <div class="navbar">
             <h1 id = "mainTitle">QR Code Generator</h1>
-            <a href="#page-2"><i class="fa-solid fa-clock-rotate-left"></i></a>
+            <!-- <a href="#page-2"><i class="fa-solid fa-clock-rotate-left"></i></a> -->
         </div>
         <div class="container">
             <p>Enter Text Or URL</p>
@@ -40,11 +43,13 @@
             <button id = "historybtn" class="btns">Delete History</button>
         </div>
     </div>
-
+    <hr>
+    <hr>
     <div id="page-2">
         <h1 id = "historyTitle">QR History</h1>
         <div class="addBox">
         </div>
+        <p class="empty-history">Nothing in History</p>
     </div>
 
 <script src="index.js"></script>
