customize download btn

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 
             <!-- <button id="btn" class="btns">Generate QR code</button> -->
             <!-- <button id = "copybtn" class="btns">Copy URL</button> -->
-            <button id = "downloadbtn" class="btns">Download QR Code</button>
+            <button id = "downloadbtn" class="btns">Download QR Code<i class="fa-solid fa-download"></i></button>
             <button id = "resetbtn" class="btns">Reset</button>
             <button id = "historybtn" class="btns">Delete History</button>
         </div>
     </div>
-    <hr>
     <hr>
     <div id="page-2">
         <h1 id = "historyTitle">QR History</h1>
