text hover effect

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <p>Enter Text Or URL</p>
             <div class="mainContainer">
                 <input type="text" placeholder="Enter Something" id="qrText">
-                <i class="fa-regular fa-copy"></i>            </div>
+                <i class="fa-regular fa-copy hover-text" data-hover-text="copy"></i>         
+            </div>
             <div class="imgBox">
                 <img src="resources/download.png" id="qrImg">
                 <!-- <div class="progress"></div> -->
@@ -39,7 +40,7 @@
             <!-- <button id="btn" class="btns">Generate QR code</button> -->
             <!-- <button id = "copybtn" class="btns">Copy URL</button> -->
             <button id = "downloadbtn" class="btns">Download QR Code<i class="fa-solid fa-download"></i></button>
-            <button id = "resetbtn" class="btns">Reset</button>
+            <button id = "resetbtn" class="btns hover-text">Reset</button>
             <button id = "historybtn" class="btns">Delete History</button>
         </div>
     </div>
