--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p class="pop-up">Link has been copied !</p>
     <div id="page-1">
         <div class="navbar">
             <h1 id = "mainTitle">QR Code Generator</h1>
@@ -40,7 +41,7 @@
             <!-- <button id="btn" class="btns">Generate QR code</button> -->
             <!-- <button id = "copybtn" class="btns">Copy URL</button> -->
             <button id = "downloadbtn" class="btns">Download QR Code<i class="fa-solid fa-download"></i></button>
-            <button id = "resetbtn" class="btns hover-text">Reset</button>
+            <button id = "resetbtn" class="btns">Reset</button>
             <button id = "historybtn" class="btns">Delete History</button>
         </div>
     </div>
